--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: "16"
       - name: Checkout the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
       - name: Yarn cache
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         env:
@@ -44,7 +44,7 @@ jobs:
         with:
           node-version: "16"
       - name: Checkout the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
       - name: Yarn cache
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         env:
@@ -78,7 +78,7 @@ jobs:
         with:
           node-version: "16"
       - name: Checkout the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
       - name: Yarn cache
         uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         env:
